增加山东财经大学

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -52,6 +52,7 @@
 				<li><input type="checkbox" id="swufe" value="swufe"  name="checkbox"  data-labelauty="西南财经大学"></li>
 				<li><input type="checkbox" id="cufe" value="cufe"  name="checkbox" data-labelauty="中央财经大学"></li>
 				<li><input type="checkbox" id="uibe" value="uibe"  name="checkbox" data-labelauty="对外经济贸易大学"></li>
+				<li><input type="checkbox" id="sdufe" value="sdufe"  name="checkbox" data-labelauty="山东财经大学"></li>
 				<li><input type="checkbox" id="fdu" value="fdu"   name="checkbox" data-labelauty="复旦大学"></li>
 				<li><input type="checkbox" id="sjtu" value="sjtu"  name="checkbox" data-labelauty="上海交通大学"></li>
 				<li><input type="checkbox" id="xmu" value="xmu"  name="checkbox" data-labelauty="厦门大学"></li>
