--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
 		<title>easyScholar</title>
 		<style>
 			.container {
-				width: 680px;
+				width: 700px;
 				height: 330px;
 				background: #fff;
 				text-align: center;
@@ -64,6 +64,7 @@
 				<li><input type="checkbox" id="sci" value="sci"  name="checkbox" data-labelauty="SCI（Clarivate）"></li>
 				<li><input type="checkbox" id="sci-base" value="sci-base"  name="checkbox" data-labelauty="SCI（中科院基础版仅top1）"></li>
 				<li><input type="checkbox" id="sci-up" value="sci-up"  name="checkbox" data-labelauty="SCI（中科院升级版仅top1）"></li>
+				<li><input type="checkbox" id="eii" value="eii"  name="checkbox" data-labelauty="EI检索"></li>
 				<li><input type="checkbox" id="cssci" value="cssci"  name="checkbox" data-labelauty="CSSCI南大核心"></li>
 				<li><input type="checkbox" id="cscd" value="cscd"  name="checkbox" data-labelauty="中国科学引文数据库"></li>
 				<li><input type="checkbox" id="pku" value="pku"  name="checkbox" data-labelauty="北大中文核心"></li>
