增加了南大、A&HCI等级，熊猫学术、深度学术两个谷歌镜像，支持知网显示英文等级

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,8 +7,8 @@
 		<title>easyScholar</title>
 		<style>
 			.container {
-				width: 700px;
-				height: 330px;
+				width: 710px;
+				height: 370px;
 				background: #fff;
 				text-align: center;
 				padding: 20px;
@@ -59,12 +59,14 @@
 				<li><input type="checkbox" id="ruc" value="ruc"  name="checkbox" data-labelauty="中国人民大学"></li>
 				<li><input type="checkbox" id="swjtu" value="swjtu"  name="checkbox" data-labelauty="西南交通大学"></li>
 				<li><input type="checkbox" id="xdu" value="xdu"  name="checkbox" data-labelauty="西安电子科技大学"></li>
+				<li><input type="checkbox" id="nju" value="nju"  name="checkbox" data-labelauty="南京大学"></li>
 				<li><input type="checkbox" id="ccf" value="ccf"  name="checkbox" data-labelauty="中国计算机学会"></li>
 				<li><input type="checkbox" id="sciif" value="sciif"  name="checkbox" data-labelauty="SCI影响因子（Clarivate）"></li>
 				<li><input type="checkbox" id="sci" value="sci"  name="checkbox" data-labelauty="SCI（Clarivate）"></li>
 				<li><input type="checkbox" id="sci-base" value="sci-base"  name="checkbox" data-labelauty="SCI（中科院基础版仅top1）"></li>
 				<li><input type="checkbox" id="sci-up" value="sci-up"  name="checkbox" data-labelauty="SCI（中科院升级版仅top1）"></li>
 				<li><input type="checkbox" id="eii" value="eii"  name="checkbox" data-labelauty="EI检索"></li>
+				<li><input type="checkbox" id="ahci" value="ahci"  name="checkbox" data-labelauty="A&HCI检索"></li>
 				<li><input type="checkbox" id="cssci" value="cssci"  name="checkbox" data-labelauty="CSSCI南大核心"></li>
 				<li><input type="checkbox" id="cscd" value="cscd"  name="checkbox" data-labelauty="中国科学引文数据库"></li>
 				<li><input type="checkbox" id="pku" value="pku"  name="checkbox" data-labelauty="北大中文核心"></li>
