支持中国科技核心期刊目录

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -70,6 +70,7 @@
 				<li><input type="checkbox" id="cssci" value="cssci"  name="checkbox" data-labelauty="CSSCI南大核心"></li>
 				<li><input type="checkbox" id="cscd" value="cscd"  name="checkbox" data-labelauty="中国科学引文数据库"></li>
 				<li><input type="checkbox" id="pku" value="pku"  name="checkbox" data-labelauty="北大中文核心"></li>
+				<li><input type="checkbox" id="zhongguokejihexin" value="zhongguokejihexin"  name="checkbox" data-labelauty="中国科技核心期刊"></li>
 			</ul>
 			<div>
 				<button id="save" class="btn btn-2 btn-2a finished">Save</button>
