支持重庆大学

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -60,6 +60,7 @@
 				<li><input type="checkbox" id="swjtu" value="swjtu"  name="checkbox" data-labelauty="西南交通大学"></li>
 				<li><input type="checkbox" id="xdu" value="xdu"  name="checkbox" data-labelauty="西安电子科技大学"></li>
 				<li><input type="checkbox" id="nju" value="nju"  name="checkbox" data-labelauty="南京大学"></li>
+				<li><input type="checkbox" id="cqu" value="cqu"  name="checkbox" data-labelauty="重庆大学"></li>
 				<li><input type="checkbox" id="ccf" value="ccf"  name="checkbox" data-labelauty="中国计算机学会"></li>
 				<li><input type="checkbox" id="sciif" value="sciif"  name="checkbox" data-labelauty="SCI影响因子（Clarivate）"></li>
 				<li><input type="checkbox" id="sci" value="sci"  name="checkbox" data-labelauty="SCI（Clarivate）"></li>
