支持CCF中文,支持用户自定义图书馆VPN的URL(V4.3)

--- a/background/html/author.html
+++ b/background/html/author.html
@@ -29,10 +29,10 @@
 								<a href="paper.html" class="li-a ">文献管理</a>
 							</li>
 							<li class="nav-tab ">
-								<a href="equation.html" class="li-a" >公式识别</a>
+								<a href="translation.html" class="li-a" >在线翻译</a>
 							</li>
 							<li class="nav-tab ">
-								<a href="translation.html" class="li-a" >在线翻译</a>
+								<a href="setting.html" class="li-a " >设置</a>
 							</li>
 							<li class="nav-tab a_active ">
 								<a href="author.html" class="li-a active" >关于作者</a>
@@ -46,7 +46,7 @@
 				<div class="nav-top">
 					<h3>欢迎使用easyScholar！！</h3>
 				</div>
-				这是作者
+				这是作者。等我完成文献管理的功能，再把这个页面完善。
 			</div>
 		</div>
 		<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
