--- a/background/html/paper.html
+++ b/background/html/paper.html
@@ -29,10 +29,10 @@
 								<a href="paper.html" class="li-a active">文献管理</a>
 							</li>
 							<li class="nav-tab ">
-								<a href="equation.html" class="li-a" >公式识别</a>
-							</li>
-							<li class="nav-tab ">
 								<a href="translation.html" class="li-a" >在线翻译</a>
+							</li>
+							<li class="nav-tab">
+								<a href="setting.html" class="li-a" >设置</a>
 							</li>
 							<li class="nav-tab ">
 								<a href="author.html" class="li-a" >关于作者</a>
@@ -46,7 +46,14 @@
 				<div class="nav-top">
 					<h3>欢迎使用easyScholar！！</h3>
 				</div>
-				这是文献管理
+				这是文献管理。计划想做成轻量、简洁的。我想把它做成一个收藏夹的样子，至于复杂功能，比如设置引用文献格式，保存笔记等就不做了。市面上那么多文献管理软件，没必要重复造轮子<br/>
+				就像翻译功能，我就挺满意的，就想做得非常简洁，偶尔遇到不懂的长难句，就不用专门打开翻译工具，而是点个 t 就完事了，0学习成本。部分用户想要复杂功能的话，可以去下载商业化软件<br/>
+				文献管理页面会有一个一行多列的大表格，只出现必要的信息，比如title、作者、时间、链接、类别，连论文等级都没有，因为怕内容太多，一行表格塞不下。<br/>
+				用户可以自定义多个类别，一个论文可以对应至少一个类别，一个类别可以对应多个论文。<br/>
+				考虑到很多人不止一台电脑，所以想做成必须登录，云端存储，这样就可以多台电脑使用相同的文献管理。注册仅需要账号密码，不需要邮箱、手机号等，还是力图简洁<br/>
+				因为设计到数据库，一旦开始运行，后面就不好改数据库的表了，所以一开始就想好咋做，一旦推出，后面就不会再动了。<br/>
+				我给自己的ddl是1.31前，因为过完年我就要找实习了，这个项目就可能没那么多时间和精力去维护了。希望它不要难产<br/>
+				有什么更好的建议可以和我交流，zhangxiangnan0906@outlook.com
 			</div>
 		</div>
 		<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
