--- a/background/html/translation.html
+++ b/background/html/translation.html
@@ -27,11 +27,11 @@
 							<li class="nav-tab ">
 								<a href="paper.html" class="li-a ">文献管理</a>
 							</li>
-							<li class="nav-tab ">
-								<a href="equation.html" class="li-a">公式识别</a>
-							</li>
 							<li class="nav-tab a_active ">
 								<a href="translation.html" class="li-a active">在线翻译</a>
+							</li>
+							<li class="nav-tab">
+								<a href="setting.html" class="li-a" >设置</a>
 							</li>
 							<li class="nav-tab ">
 								<a href="author.html" class="li-a">关于作者</a>
@@ -134,6 +134,7 @@
 				<button class="glyphicon glyphicon-question-sign btn btn-primary"
 						data-toggle="tooltip" data-placement="top" title='edge浏览器用户，请务必查看主页中"edge浏览器上按下键盘后，翻译没有反应？"问题的解决办法' id="saveTranslateSetting" type="button" data-toggle="button" aria-pressed="false">
 				  保存该页面所有设置
+				</button>
 				</div>
 			</div>
 			<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
