--- a/popup/popup.html
+++ b/popup/popup.html
@@ -78,10 +78,11 @@
 			</div>
 		</div>
 		<div id="btn_list">
-			<a target="_blank" href="http://easyscholar.cc" ><button class="btn btn-6 btn-6c finished"  >科研云盘</button></a>
+			<a target="_blank" href="/background/html/home.html" ><button class="btn btn-6 btn-6c finished" >主页</button></a>
 			<a target="_blank" href="/background/html/paper.html" ><button class="btn btn-6 btn-6c unfinished" disabled="true" >文献管理</button></a>
-			<button class="btn btn-6 btn-6c unfinished" disabled="true" >公式识别</button>
+<!--			<button class="btn btn-6 btn-6c unfinished" disabled="true" >公式识别</button>-->
 			<a target="_blank" href="/background/html/translation.html" ><button class="btn btn-6 btn-6c finished" >在线翻译</button></a>
+			<a target="_blank" href="http://easyscholar.cc" ><button class="btn btn-6 btn-6c finished"  >科研云盘</button></a>
 		</div>
 		<div class="foot">Copyright © 2021 <a target="_blank" href="https://blog.csdn.net/weixin_49328057/article/details/113148625?spm=1001.2014.3001.5502">Nixak</a>. All Rights Reserved.</div>
 		<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
