--- a/background/html/home.html
+++ b/background/html/home.html
@@ -73,7 +73,7 @@
 
 ## 安装
 
-1. Microsoft Edge应用商店下载 **（推荐）**：点击[easyScholar]([easyScholar - Microsoft Edge Addons](https://microsoftedge.microsoft.com/addons/detail/easyscholar/bpepicgagmdchlkjjeeiekpoafehpagm))，点击安装即可。
+1. Microsoft Edge应用商店下载 **（推荐）**：点击[easyScholar](https://microsoftedge.microsoft.com/addons/detail/easyscholar/bpepicgagmdchlkjjeeiekpoafehpagm)，点击安装即可。
 2. 谷歌应用商店下载 **（需要梯子）**  ：点击[easyScholar](https://chrome.google.com/webstore/detail/easyscholar/njgedjcccpcfmjecccaajkjiphpddfji?hl=zh-CN&authuser=0)，点击安装即可。
 2. 火狐应用商店下载：点击[easyScholar](https://addons.mozilla.org/zh-CN/firefox/addon/easyscholar/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=search)，点击安装即可。
 3. 离线安装方法（此为谷歌浏览器教程，其他浏览器步骤基本相似）：
