增加打赏收款码

--- a/background/html/author.html
+++ b/background/html/author.html
@@ -46,7 +46,7 @@
 				<div class="nav-top">
 					<h3>欢迎使用easyScholar！！</h3>
 				</div>
-				这是作者。等我完成文献管理的功能，再把这个页面完善。
+				这是作者。 等我完成文献管理的功能，再把这个页面完善。<br/>
 			</div>
 		</div>
 		<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
