--- a/background/html/home.html
+++ b/background/html/home.html
@@ -447,6 +447,11 @@
 | 2021.12.17 | 增加了A&HCI等级、中国科技核心期刊、重庆大学<br/>支持知网显示英文等级，更换了图标 |   Nixiak-nan   |
 | 2021.12.19 |      支持CCF中文<br/>支持用户自定义图书馆VPN的URL(V4.3)      |   Nixiak-nan   |
 
+## 打赏
+
+如果感觉这款插件确实有帮助到你，能否赏作者一杯奶茶？或是一顿饭？又或是一份KFC？
+
+![](picture/pay.png)
 
 					</textarea>    
 				</div>
