--- a/background/html/paper.html
+++ b/background/html/paper.html
@@ -51,9 +51,15 @@
 				文献管理页面会有一个一行多列的大表格，只出现必要的信息，比如title、作者、时间、链接、类别，连论文等级都没有，因为怕内容太多，一行表格塞不下。<br/>
 				用户可以自定义多个类别，一个论文可以对应至少一个类别，一个类别可以对应多个论文。<br/>
 				考虑到很多人不止一台电脑，所以想做成必须登录，云端存储，这样就可以多台电脑使用相同的文献管理。注册仅需要账号密码，不需要邮箱、手机号等，还是力图简洁<br/>
-				因为设计到数据库，一旦开始运行，后面就不好改数据库的表了，所以一开始就想好咋做，一旦推出，后面就不会再动了。<br/>
+				因为设计到数据库，一旦开始运行，后面就不好改数据库的表了，所以一开始就想好咋做，一旦推出，后面就不会再动了。<br/><br/>
 				我给自己的ddl是1.31前，因为过完年我就要找实习了，这个项目就可能没那么多时间和精力去维护了。希望它不要难产<br/>
-				有什么更好的建议可以和我交流，zhangxiangnan0906@outlook.com
+				（随便多嘴一句，计算机的东西是真的多）<br/>
+				（Java基础, JVM调优, 多线程, Mysql优化查询, Redis, Spring , Spring MVC, Spring Boot, 微服务，Mybatis， 计算机网络，计算机组成原理，操作系统，Leetcode至少200道算法，项目，随便一个都够我喝一壶了）<br/>
+				<br/>
+				有什么更好的建议可以和我交流，zhangxiangnan0906@outlook.com<br/>
+				又或者你可以请我喝杯奶茶？或是一顿钵钵鸡？又或是一份地道的成都老火锅？也许作者就有了动力去继续维护该项目<br/>
+				(本来想全部功能实现后才放捐赠二维码的，但是一方面是确实有点累，再一个听说3.1日之后就禁止个人收款码了，可能打赏这种东西，即将变成了历史)。
+				<img src="/background/html/pay.png" alt="图片未加载" width="40%"/>
 			</div>
 		</div>
 		<div id="clickCanvas" style=" position:fixed;left:0;top:0;z-index:999999999;pointer-events:none;"></div>
