增加打赏收款码

--- a/background/html/paper.html
+++ b/background/html/paper.html
@@ -56,7 +56,7 @@
 				（随便多嘴一句，计算机的东西是真的多）<br/>
 				（Java基础, JVM调优, 多线程, Mysql优化查询, Redis, Spring , Spring MVC, Spring Boot, 微服务，Mybatis， 计算机网络，计算机组成原理，操作系统，Leetcode至少200道算法，项目，随便一个都够我喝一壶了）<br/>
 				<br/>
-				有什么更好的建议可以和我交流，zhangxiangnan0906@outlook.com<br/>
+				有什么更好的建议可以和我交流，zhangxiangnan0906@outlook.com。每一份邮件（多的时候一天十几封邮件），每一个Github issue，我都有很认真的在回复 <br/>
 				又或者你可以请我喝杯奶茶？或是一顿钵钵鸡？又或是一份地道的成都老火锅？也许作者就有了动力去继续维护该项目<br/>
 				(本来想全部功能实现后才放捐赠二维码的，但是一方面是确实有点累，再一个听说3.1日之后就禁止个人收款码了，可能打赏这种东西，即将变成了历史)。
 				<img src="/background/html/pay.png" alt="图片未加载" width="40%"/>
